# Insouled_ChibiOS

./: .gitignore  CMakeLists.txt  README.md  RM2018.cfg  compile_win.bat  readme.txt
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.cdt.core/: dev.1521289846079.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: dev.sc
.metadata/.plugins/org.eclipse.core.resources/.projects/dev/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/dev/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
board/: board.h  board.mk
board/cfg/: board.chcfg
community/os/hal/: hal.mk
community/testhal/STM32/STM32F4xx/USB_HOST/: Makefile  fatfs_diskio.c  halconf_community.h  main.c
configurations/: RM2018.cfg
dev/: .project  Makefile  chassis.c  chassis.h  chconf.h  dev.mk  gimbal.c  gimbal.h  global.h  halconf.h  main.c  main.h  mcuconf.h  pid.h  remote.c  remote.h  shoot.c  shoot.h
dev/component_handle/: chassis.h  gimbal.c  gimbal.h  me_arm.c  me_arm.h
dev/control/: arm.c  arm.h  chassis.c  chassis.h  debug.c  debug.h  gimbal.c  gimbal.h  main_control_loop.c  main_control_loop.h  me_arm.c  me_arm.h  mode_handle.c  mode_handle.h  pid.c  pid.h  shoot.c  shoot.h
dev/debug/: debug.c  debug.h  led.c  led.h  serial_debug.c  serial_debug.h
dev/hardware/: remote.c  remote.h
dev/info_interaction/: can.c  can.h  led.c  led.h  led_debug.c  led_debug.h  motor_interaction.c  motor_interaction.h  pwm.c  pwm.h  remote.c  remote.h  serial_debug.c  serial_debug.h  usart_debug.c  usart_debug.h
dev/modules/: pid.c  pid.h
doc/: chassis.md  debug.md  general.md  gimbal.md
doc/hal/: Doxyfile_chm  Doxyfile_html
doc/nil/: Doxyfile_chm  Doxyfile_html
doc/rt/: Doxyfile_chm  Doxyfile_html
hardware/: board.h  board.mk
hw/: board.h
os/common/abstractions/cmsis_os/: cmsis_os.c
os/common/abstractions/nasa_cfe/psp/include/: cfe_psp.h
os/common/startup/e200/devices/SPC560BCxx/: boot.S
os/common/startup/e200/devices/SPC560Bxx/: boot.S
os/common/startup/e200/devices/SPC560Dxx/: boot.S  boot_cw.s
os/common/startup/e200/devices/SPC560Pxx/: boot.S
os/common/startup/e200/devices/SPC563Mxx/: boot.S
os/common/startup/e200/devices/SPC564Axx/: boot.S
os/common/startup/e200/devices/SPC56ECxx/: boot.S  boot_cw.s
os/common/startup/e200/devices/SPC56ELxx/: boot.S
os/hal/include/: hal_pwm.h
os/hal/lib/fallback/I2C/: hal_i2c_lld.c
os/hal/ports/AVR/: hal_pwm_lld.c
os/hal/ports/SPC5/SPC560Dxx/: xpc560d.h
os/hal/ports/SPC5/SPC564Axx/: xpc564a.h
os/hal/ports/SPC5/SPC56ECxx/: xpc56ec.h
os/hal/ports/SPC5/SPC5xx/EDMA_v1/: spc5_edma.h
os/hal/ports/SPC5/SPC5xx/SIUL2_v1/: hal_pal_lld.h
os/hal/ports/SPC5/SPC5xx/SIUL_v1/: hal_pal_lld.h
os/hal/ports/SPC5/SPC5xx/SIU_v1/: hal_pal_lld.h
os/hal/ports/SPC5/SPC5xx/eMIOS200_v1/: hal_pwm_lld.c
os/hal/ports/SPC5/SPC5xx/eMIOS_v1/: hal_pwm_lld.c
os/hal/ports/STM32/LLD/I2Cv1/: hal_i2c_lld.c
os/hal/ports/STM32/LLD/MACv1/: hal_mac_lld.h
os/hal/ports/STM32/LLD/USARTv2/: hal_uart_lld.h
os/hal/src/: hal_adc.c  hal_dac.c  hal_pwm.c  hal_rtc.c  hal_serial_usb.c  hal_usb.c
os/various/lwip_bindings/: lwipthread.c
testhal/AVR/ADC/: Makefile
testhal/AVR/EXT/: Makefile
testhal/AVR/I2C/: Makefile
testhal/AVR/ICU/: Makefile
testhal/AVR/SPI/: Makefile
testhal/STM32/STM32F7xx/GPT-ADC/: mcuconf.h
testhal/STM32/STM32F7xx/IRQ_STORM/: mcuconf.h
testhal/STM32/STM32F7xx/PWM-ICU/: mcuconf.h
testhal/STM32/STM32F7xx/SPI/: mcuconf.h
testhal/STM32/STM32F7xx/USB_CDC/: mcuconf.h
